# BD_course_work

./: DB_class.py  README.md  main.py  pyproject.toml  settings.py  utils.py
src/: DB_class.py
