[tool.poetry]
name = "bd_course_work"
version = "0.1.0"
description = ""
authors = ["Artem Osipov <tema.osipov@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2 = "^2.9.7"
psycopg2-binary = "^2.9.7"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
